# MIDI_expt

./: .gitignore  CMakeLists.txt  README.md  byte_queue.c  byte_queue.h  midi_main.c  note_map.txt
